In profile page account Section doned

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Navigation</title>
+    <title>Snaphub</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col">
-                        <h4>seller-buyer</h4>
+                        <h4>Snaphub</h4>
                         <ul>
                             <li><a href="aboutus.html">about us</a></li>
                             <li><a href="aboutus.html">our services</a></li>
