Just chage some dir aliginment'

--- a/Account/profile.html
+++ b/Account/profile.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/profile.css">
-    <link rel="icon" href="image/logo2.jpg">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/profile.css">
+    <link rel="icon" href="../image/logo2.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
@@ -17,8 +17,8 @@
 <body>
     <header>
         <div class="top-bar">
-            <a class="navbar-brand" href="index.html">
-                <img src="image/logo2.jpg" alt="seller-buyer Logo">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../image/logo2.jpg" alt="seller-buyer Logo">
             </a>
             <div class="search-container">
                 <input type="text" id="search-bar" placeholder="Search...">
@@ -27,7 +27,7 @@
             <div id="auth-button-container">
                 <a href="Login.html"><button id="login-button">Login</button></a>
                 <button id="sign-out-button" style="display: none;">Sign Out</button>
-                <a href="profile.html"><img id="profile-icon" src="image/Icons/profile icon.png" alt="Profile Icon" style="display: none;"></a>
+                <a href="profile.html"><img id="profile-icon" src="../image/Icons/profile icon.png" alt="Profile Icon" style="display: none;"></a>
                 <button id="cart-button"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
@@ -163,8 +163,8 @@
             </div>
         </footer>
         <script src="js/Script.js"></script>
-        <script type="module" src="js/db/emailauth/authState.js"></script>
-        <script type="module" src="js/db/profile/profile.js"></script>
+        <script type="module" src="../js/db/emailauth/authState.js"></script>
+        <script type="module" src="../js/db/profile/profile.js"></script>
     </body>
 
 </html>
