--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/signUp.css">
-    <link rel="stylesheet" href="css/font.css">
-    <link rel="icon" href="image/logo2.jpg ">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/signUp.css">
+    <link rel="stylesheet" href="../css/font.css">
+    <link rel="icon" href="../image/logo2.jpg ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
@@ -56,8 +56,8 @@
     </div>
 
     <!-- Firebase -->
-    <script type="module" src="js/db/firebaseinit.js"></script>
-    <script type="module" src="js/db/emailauth/signUp.js"></script>
+    <script type="module" src="../js/db/firebaseinit.js"></script>
+    <script type="module" src="../js/db/emailauth/signUp.js"></script>
 </body>
 
 </html>
