--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <button id="search-button"><i class="fas fa-search"></i></button>
             </div>
             <div id="auth-button-container">
-                <a href="Login.html"><button id="login-button">Login</button></a>
+                <a href="Account/Login.html"><button id="login-button">Login</button></a>
                 <button id="sign-out-button" style="display: none;">Sign Out</button>
-                <a href="profile.html"><img id="profile-icon" src="image/Icons/profile icon.png" alt="Profile Icon" style="display: none;"></a>
+                <a href="Account/profile.html"><img id="profile-icon" src="image/Icons/profile icon.png" alt="Profile Icon" style="display: none;"></a>
                 <button id="cart-button"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
