--- a/Account/recover.html
+++ b/Account/recover.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Recovery</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/login screen.css">
-    <link rel="stylesheet" href="css/font.css">
-    <link rel="icon" href="image/logo2.jpg">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/login screen.css">
+    <link rel="stylesheet" href="../css/font.css">
+    <link rel="icon" href="../image/logo2.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Firebase -->
-    <script type="module" src="js/db/firebaseinit.js"></script>
-    <script type="module" src="js/db/emailauth/recover.js"></script>
+    <script type="module" src="../js/db/firebaseinit.js"></script>
+    <script type="module" src="../js/db/emailauth/recover.js"></script>
 </body>
 </html>
